mis image en dessous avec text en dcous

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 
    <div class="center"><img class="round" src="images/minecraft.jpg" alt="Minecraft champion"></div>
 <h3 class="center fontdavid margin">David Minecraft Pro League Player!!!</h3>
+<nav class="navbar navbar-light bg-light">
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+</nav>
+
 <div class="container-fluid">
     <div class="row borders">
       <div class="col-lg-4 col-md-6 col-sm-6 text-center text-capitalize borders">
@@ -32,18 +39,15 @@
     </div>
     </div>
   </div>
- 
-    
-    <div class=""><img src="images/water1.jpg" class="rounded float-left waters" alt="water1">
-
-        cfhdch
-    
-    </div>
-
-    <div class=""><img src="images/water2.jpg" class="rounded float-right waters" alt="water2">
-  
-  
-    </div>
+ <div class="container">
+  <div class="row">
+    <div class="col"><img src="images/water1.jpg" class="rounded waters" alt="water1"></div>
+    <div class="col"><img src="images/water2.jpg" class="rounded waters" alt="water2"></div>
+    <div class="w-100"></div>
+    <div class="col fontwater left textwater">La bleue et la noire on bein du fun pendant que la rose est saoule en caline pis que la verte a pas d'amis en arrière.</div>
+    <div class="col fontwater right textwater">plus tard, les quatres amis bouteilles ont bein du fun.</div>
+  </div>
+</div>
  
 
 
